<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="t.e.medicaldiary.UserRegisterActivity">

    <TextView
        android:id="@+id/tv_give_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_username"/>

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_give_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_password"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:onClick="registerUser"/>

    <Button
        android:id="@+id/button_show_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show"
        android:onClick="showAll"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
